--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -2,7 +2,24 @@
     Custom styles
 */
 
-body {background: #f1f1f1;}
-.btn-send {background: #333; color: #fff; padding: 0.375rem 1.5rem;}
-.btn-send:hover, .btn-send:focus, .btn-send:active {background: #ddd; color: #333;}
-form .alert {padding: 0.2rem 1rem; font-size: 12px;}
+body {
+    background: #f1f1f1;
+}
+
+.btn-send {
+    background: #333;
+    color: #fff;
+    padding: 0.375rem 1.5rem;
+}
+
+.btn-send:hover,
+.btn-send:focus,
+.btn-send:active {
+    background: #ddd;
+    color: #333;
+}
+
+form .alert {
+    padding: 0.2rem 1rem;
+    font-size: 12px;
+}
