--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <h5>DB users:</h5>
     <ul>
     {% for user in users %}
-        <li>{{user.username}} | <i>{{user.email}}</i> | pass: {{user.password}}</li>
+        <li>{{user.username}} | <i>{{user.email}}</i></li>
     {% endfor %}
     </ul>
 {% endblock %}
