--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,27 +24,30 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                <li class="nav-item{% if active == 'index' %} active{% endif %}">
+                <li class="nav-item{% if active_page == 'index' %} active{% endif %}">
                     <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item{% if active_page == 'about' %} active{% endif %}">
                     <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item me-2">
+                {% if not current_user.is_authenticated %}
+                <li class="nav-item me-2{% if active_page == 'register' %} active{% endif %}">
+                    <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                </li>
+                {% else %}
+                 <li class="nav-item me-2{% if active_page == 'profile' %} active{% endif %}">
+                    <a class="nav-link" href="{{ url_for('user.profile', username=current_user.username) }}">Profile</a>
+                </li>
+                {% endif %}
+                <li class="nav-item me-2{% if active_page == 'login' %} active{% endif %}">
                     {% if current_user.is_authenticated %}
                     <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
                     {% else %}
                     <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                     {% endif %}
                 </li>
-                {% if not current_user.is_authenticated %}
-                <li class="nav-item me-2">
-                    <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-                </li>
-                {% endif %}
             </ul>
         </div>
     </div>
