--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% set active_page = 'index' %}
 
-{% block title %}Social Network{% endblock %}
+{% block title %}Home page{% endblock %}
 
 {% block content %}
     <h5>DB users:</h5>
