--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -44,7 +44,34 @@ form .alert {
     height: 100%;
 }
 
+.us_info {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+.us_info:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: none;
+}
+
 .us_logo {
     display: inline-block;
-    margin-right: 5px;
+    margin-right: 7px;
+    transition: all 0.2s ease;
+    text-decoration: none;
+}
+
+.us_logo:hover {
+    opacity: 0.7;
+}
+
+.us_logo img {
+    box-shadow: 0 0 2px 0 rgba(30,30,30,0.3);
+}
+
+.us_name {
+    color: #333;
+    margin-left: 7px;
 }
