--- a/app/templates/user/blog.html
+++ b/app/templates/user/blog.html
@@ -5,13 +5,13 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg-8">
             {% for post in posts %}
                 {% include '_post.html' %}
             {% endfor %}
         </div>
 
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <div class="card border-0 shadow">
                 <div class="card-body">
                     <h5 class="card-title mb-3">Create a new post</h5>
