--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -3,7 +3,7 @@
 */
 
 body {
-    background: #f1f1f1;
+    background: #f1f1f1 !important;
 }
 
 p {
@@ -91,4 +91,10 @@ form .alert {
 .us_name {
     color: #333;
     margin-left: 7px;
+}
+
+.pr_ava img {
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    box-shadow: 0 0 12px 0 rgba(30,30,30,0.1);
 }
