--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -10,6 +10,15 @@ p {
     margin-bottom: 0.3rem;
 }
 
+a {
+    color: #333333;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #777777;
+}
+
 .cl-red {
     color: brown;
 }
